network/6_exam_task_1/hello-com-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-com
spec:
  rules:
  - host: hello.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: hello-service
            port:
              number: 80
